# wassily

./: .gitignore  CHANGELOG.md  CRATES_RESTRUCTURE_PLAN.md  Cargo.toml  README.md  clippy.toml
examples/: color_scale.rs  fadeline.rs  gradient.rs  noise.rs  palette.rs  saturn.rs  scale.rs  schotter.rs  show_palette.rs  sphere.rs  star.rs  stipple.rs  wheel.rs
src/: README.md  base.rs  canvas.rs  color_names.rs  color_palette.rs  color_palettes.rs  curves.rs  dsl.rs  endo2d.rs  flow.rs  grain.rs  grid.rs  kolor.rs  lib.rs  lines.rs  math.rs  matrix.rs  noise.rs  noises.rs  okcolor.rs  parametric.rs  point_map.rs  points.rs  prelude.rs  quadtree.rs  quiet.rs  raqote.rs  rectangles.rs  shape.rs  sketch.rs  skia.rs  sphere.rs  stipple.rs  subdivision.rs  svg.rs  textures.rs  util.rs  warp.rs
src/noise/: gabor.rs
src/noises/: curl.rs  gabor.rs  img_noise.rs  sinusoid.rs  trig.rs  white.rs
src/quiet/: curl.rs  gabor.rs  trig.rs  white.rs
wassily/: Cargo.toml
wassily-algorithms/: Cargo.toml
wassily-algorithms/src/: endo2d.rs  lib.rs  sphere.rs
wassily-color/: Cargo.toml
wassily-color/src/: color.rs  color_names.rs  color_palette.rs  kolor.rs  lib.rs
wassily-core/: Cargo.toml
wassily-core/src/: canvas.rs  lib.rs  points.rs  shape.rs  util.rs
wassily-effects/: Cargo.toml
wassily-effects/src/: grain.rs  lib.rs  stipple.rs  textures.rs  warp.rs
wassily-geometry/: Cargo.toml
wassily-geometry/src/: curves.rs  grid.rs  lib.rs  lines.rs  quadtree.rs  subdivision.rs
wassily-noise/: Cargo.toml
wassily-noise/src/: curl.rs  gabor.rs  lib.rs  white.rs
wassily/examples/: color_scale.rs  fadeline.rs  logo.rs  palette.rs  saturn.rs  scale.rs  schotter.rs  sphere.rs  star.rs  wheel.rs
wassily/src/: color_names.rs  color_palette.rs  curves.rs  endo2d.rs  grain.rs  kolor.rs  lib.rs  lines.rs  matrix.rs  prelude.rs  quadtree.rs  sketch.rs  sphere.rs  stipple.rs  subdivision.rs  textures.rs  warp.rs
wassily/src/noises/: gabor.rs
