[workspace]
members = [
    "wassily",
    "wassily-core",
    "wassily-color"
]
resolver = "2"

[workspace.dependencies]
# Core rendering
tiny-skia = "0.11.4"
image = "0.25.4"
png = "0.17.10"

# Math and numerics
num-traits = "0.2"
num-complex = "0.4.6"

# Random number generation
rand = { version = "0.9.1", features = ["small_rng"] }
rand_distr = "0.5.1"

# Color handling
palette = "0.7.6"
color-thief = "0.2"
once_cell = "1.19"

# Noise generation
noise = "0.9"

# Logging
log = "0.4.22"

# Dev dependencies
rayon = "1.10.0"
itertools = "0.14.0"