[package]
name = "wassily-algorithms"
version = "0.6.6"
edition = "2021"
authors = ["Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com>"]
license = "MIT"
description = "Specialized rendering algorithms for wassily - a generative art library"
repository = "https://github.com/jeffreyrosenbluth/wassily"
readme = "README.md"
keywords = ["generative", "art", "graphics", "algorithms", "rendering"]
categories = ["graphics", "multimedia::images", "algorithms"]

[dependencies]
wassily-core = { path = "../wassily-core" }
wassily-color = { path = "../wassily-color" }
tiny-skia = { workspace = true }