[package]
name = "wassily-noise"
version = "0.6.6"
edition = "2021"
authors = ["Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com>"]
license = "MIT"
description = "Noise utilities for wassily - a generative art library"
repository = "https://github.com/jeffreyrosenbluth/wassily"
readme = "README.md"
keywords = ["generative", "art", "graphics", "noise", "procedural"]
categories = ["graphics", "multimedia::images", "science"]

[dependencies]
noise = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
num-traits = { workspace = true }
image = { workspace = true }
palette = { workspace = true }