[package]
name = "wassily"
version = "0.1.0"
authors = ["jeffreyrosenbluth <jeffrey.rosenbluth@gmail.com>"]
edition = "2021"
exclude = [
    "src/bin/meta.rs"
]
license = "MIT OR Apache-2.0"
description = "wassily is both an API and set of tools for creating generative 2D art"
readme = "README.md"
repository = "https://github.com/jeffreyrosenbluth/wassily/"
homepage = "https://github.com/jeffreyrosenbluth/wassily/"
keywords = ["art", "graphics","2d", "creative", "sketch"]
categories = ["graphics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wassily-core = { path = "../wassily-core" }
wassily-color = { path = "../wassily-color" }
wassily-noise = { path = "../wassily-noise" }
wassily-geometry = { path = "../wassily-geometry" }
tiny-skia = { workspace = true }
noise = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
palette = { workspace = true }
png = { workspace = true }
image = { workspace = true }
color-thief = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
itertools = { workspace = true }